[project]
name = "miyu"
version = "0.1.1"
description = "Python namespace for miyu packages"
readme = "README.md"
authors = [
    { name = "clea", email = "clea.gonay@miyu.fr" }
]
requires-python = ">=3.9"
dependencies = []


[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
